--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .Social-container{
  display: flex;
+ margin: 0%;
 }
 .container{
-    width: 100%;
-    padding: 0%;
-
+   max-width: 100%;
+   padding: 0%;
+   
 }
 .slidebar{
     height: 500px;
@@ -12,7 +13,7 @@
 .card{
     margin-left: 15px;
     margin-top: 20px;
-    padding: 10px,30px;
+
 }
 .btn{
     margin-left: 1px;
